# OETools

./: .gitignore  README.md  SECURITY.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: build-installers.yml
ci/: build-installers.yml
docs/: DEVELOPER.md  KNOWN_LIMITATIONS.md  ROADMAP.md
final installs/: README.md
final installs/windows/: README.md
scripts/: build-macos.sh  build-windows.ps1
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  models.rs
src-tauri/src/commands/: authenticity.rs  backup_browser.rs  backups.rs  battery.rs  business.rs  converter.rs  data_export.rs  devices.rs  diagnostics.rs  exports.rs  jobs.rs  media.rs  messages.rs  mod.rs  privacy.rs  reports.rs  schedules.rs  security.rs  settings.rs  snapshots.rs  transfer.rs
src-tauri/src/core/: app_state.rs  backup_reader.rs  dependency_manager.rs  errors.rs  filesystem.rs  job_queue.rs  mod.rs
src-tauri/src/database/: migrations.rs  mod.rs
src-tauri/src/database/repositories/: backups.rs  battery.rs  dependencies.rs  devices.rs  jobs.rs  logs.rs  mod.rs  privacy.rs  reports.rs  schedules.rs  security.rs  settings.rs  snapshots.rs
src-tauri/src/device_bridge/: libimobiledevice.rs  mock.rs  mod.rs  parser.rs
src-tauri/src/security/: command_runner.rs  mod.rs  path_validation.rs
src/app/: App.tsx  providers.tsx  routes.tsx
src/components/charts/: storage-donut.tsx
src/lib/utils/: cn.ts  (+2 more)
src/styles/: globals.css
(+75 files in other folders)
