[package]
name = "idevice-desk"
version = "0.1.0"
description = "OETools (Or Eliav Tools) — privacy-first local iOS/iPadOS device management utility"
authors = ["Or Eliav"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "idevice_desk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
which = "7"
plist = "1"
flate2 = "1"
sha2 = "0.10"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
